--- a/src/Seq.App.DigestEmail/Resources/RawBodyTemplate.html
+++ b/src/Seq.App.DigestEmail/Resources/RawBodyTemplate.html
@@ -140,7 +140,7 @@
         <span class="seq-message-template">[<strong>{{$Level}}</strong>] {{$Message}}</span>
       </div>
       <div class="seq-event-actions">
-        <a href="{{{$ServerUri}}}#/events?filter=@Id%3D'{{$Id}}'&show=expanded" class="action">View in Seq</a>
+        <a href="{{{../$ServerUri}}}#/events?filter=@Id%3D'{{$Id}}'&show=expanded" class="action">View in Seq</a>
       </div>
       <div class="seq-event-properties">
         {{#each $Properties}}
